; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/services/hostapd/src/wpa_supplicant/extr_ubus.c_wpas_ubus_init.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/services/hostapd/src/wpa_supplicant/extr_ubus.c_wpas_ubus_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32 }

@ctx = common dso_local global %struct.TYPE_6__* null, align 8
@wpas_ubus_connection_lost = common dso_local global i32 0, align 4
@ubus_receive = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @wpas_ubus_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpas_ubus_init() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ctx, align 8
  %3 = icmp ne %struct.TYPE_6__* %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %21

5:                                                ; preds = %0
  %6 = call %struct.TYPE_6__* @ubus_connect(i32* null)
  store %struct.TYPE_6__* %6, %struct.TYPE_6__** @ctx, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ctx, align 8
  %8 = icmp ne %struct.TYPE_6__* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %5
  store i32 0, i32* %1, align 4
  br label %21

10:                                               ; preds = %5
  %11 = load i32, i32* @wpas_ubus_connection_lost, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ctx, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ctx, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @ubus_receive, align 4
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** @ctx, align 8
  %20 = call i32 @eloop_register_read_sock(i32 %17, i32 %18, %struct.TYPE_6__* %19, i32* null)
  store i32 1, i32* %1, align 4
  br label %21

21:                                               ; preds = %10, %9, %4
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local %struct.TYPE_6__* @ubus_connect(i32*) #1

declare dso_local i32 @eloop_register_read_sock(i32, i32, %struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
